--- a/doc/cjconf-get.1
+++ b/doc/cjconf-get.1
@@ -1,5 +1,5 @@
 '\" t
-.\"     Title: cjdrouted
+.\"     Title: cjconf-get
 .\"    Author: [see the "AUTHOR" section]
 .\" Generator: DocBook XSL Stylesheets v1.75.2 <http://docbook.sf.net/>
 .\"      Date: 03/02/2012
@@ -7,7 +7,7 @@
 .\"    Source: \ \&
 .\"  Language: English
 .\"
-.TH "CJDROUTED" "1" "03/02/2012" "\ \&" "\ \&"
+.TH "CJCONF\-GET" "1" "03/02/2012" "\ \&" "\ \&"
 .\" -----------------------------------------------------------------
 .\" * Define some portability stuff
 .\" -----------------------------------------------------------------
@@ -28,58 +28,35 @@
 .\" * MAIN CONTENT STARTS HERE *
 .\" -----------------------------------------------------------------
 .SH "NAME"
-cjdrouted \- Daemon control over cjdroute\&.
+cjconf-get \- retrieves information from a cjdroute config\&.
 .SH "SYNOPSIS"
 .sp
-\fBcjdrouted\fR [start|stop|reconfigure|start\-default|commands|tunnel|killtunnel]
+\fBcjconf\-get\fR [ \-f conf_file ] [ INDEXES ]
 .SH "DESCRIPTION"
 .sp
-The cjdrouted(1) command provides shortcuts for manipulating the cjdroute process, as well as creating and destroying tunnel devices\&.
-.SH "SUBCOMMANDS"
+cjconf\-get(1) is a great way to base scripting on cjdns configs\&. It parses the JSON recursively, with each index given in the arguments steering it one level of heirarchy deeper\&.
+.SH "EXAMPLES"
 .PP
-\fBstart\fR
+\fBcjconf\-get\fR
 .RS 4
-Make sure /etc/cjdroute\&.conf exists, use it to run cjdroute, and write the process id to /var/run/cjdroute\&.pid\&.
+Since it assumes the conf is at /etc/cjdroute\&.conf when not otherwise specified, this is equivalent to cjconf\-print\&.
 .RE
 .PP
-\fBstop\fR
+\fBcjconf\-get\fR \-f myconf
 .RS 4
-Kill the daemon process whose pid is in /var/run/cjdroute\&.pid\&.
+Prints the entirety of the JSON at the location "myconf"\&. Again, without using indexes, this is very much like the more basic cjconf\-print\&. Because the "\-f filename" tuple is removed from the argument list during processing, it can occur at any time within the arguments, provided it only occurs once\&.
 .RE
 .PP
-\fBreconfigure\fR
+\fBcjconf\-get\fR router interface
 .RS 4
-Shortcut alias for
-\fIcjdrouted stop && cjdrouted start\fR\&.
-.RE
-.PP
-\fBstart\-default\fR
-.RS 4
-Merges default peers into config before calling
-\fIcjdrouted start\fR\&.
-.RE
-.PP
-\fBcommands\fR
-.RS 4
-Commands that need to be run to "activate" a tunnel device\&. The output of "cjdroute \-\-getcmds" with the default conf, and the device find/replaced with the result of
-\fIcjdrouted tunnel\fR\&.
-.RE
-.PP
-\fBtunnel\fR
-.RS 4
-Create a tunnel device if none is set up, storing the name in /tmp/cjdroute_tunnel\&.
-.RE
-.PP
-\fBkilltunnel\fR
-.RS 4
-Remove the tunnel named in /tmp/cjdroute_tunnel\&.
+Prints the contents of config["router"]["interface"]\&. If this is a string or int, it will be printed out directly, with no JSON formatting\&. Otherwise, it\(cqs pretty\-printed with an indent width of 4 spaces, like usual\&.
 .RE
 .SH "BUGS"
 .sp
 See https://github\&.com/campadrenalin/cjdns\-deb/issues
 .SH "AUTHOR"
 .sp
-cjdrouted was written by Philip Horger in 2012\&. cjdroute was written by Caleb Delisle\&.
+cjconf\-get was written by Philip Horger in 2012\&. cjdroute was written by Caleb Delisle\&.
 .SH "RESOURCES"
 .sp
 Github: https://github\&.com/campadrenalin/cjdns\-deb/
