--- a/doc/cjconf-print.1
+++ b/doc/cjconf-print.1
@@ -1,5 +1,5 @@
 '\" t
-.\"     Title: cjconf-get
+.\"     Title: cjconf-print
 .\"    Author: [see the "AUTHOR" section]
 .\" Generator: DocBook XSL Stylesheets v1.75.2 <http://docbook.sf.net/>
 .\"      Date: 03/03/2012
@@ -7,7 +7,7 @@
 .\"    Source: \ \&
 .\"  Language: English
 .\"
-.TH "CJCONF\-GET" "1" "03/03/2012" "\ \&" "\ \&"
+.TH "CJCONF\-PRINT" "1" "03/03/2012" "\ \&" "\ \&"
 .\" -----------------------------------------------------------------
 .\" * Define some portability stuff
 .\" -----------------------------------------------------------------
@@ -28,42 +28,30 @@
 .\" * MAIN CONTENT STARTS HERE *
 .\" -----------------------------------------------------------------
 .SH "NAME"
-cjconf-get \- retrieves information from a cjdroute config\&.
+cjconf-print \- Pretty prints your config\&.
 .SH "SYNOPSIS"
 .sp
-\fBcjconf\-get\fR [\-n] [ \-f conf_file ] [ INDEXES ]
+\fBcjconf\-print\fR [ path ]
 .SH "DESCRIPTION"
 .sp
-cjconf\-get(1) is a great way to base scripting on cjdns configs\&. It parses the JSON recursively, with each index given in the arguments steering it one level of heirarchy deeper\&.
-.sp
-To limit output, try the \-n option\&. For dicts, it prints only the keys\&. For arrays, it prints out the length\&. For anything else it just prints it normally\&.
+cjconf\-print(1) prints out a JSON document in full\&. It takes a single "path" argument for a file location, but when omitted, it assumes the path to be /etc/cjdroute\&.conf\&.
 .SH "EXAMPLES"
 .PP
-\fBcjconf\-get\fR
+\fBcjconf\-print\fR
 .RS 4
-Since it assumes the conf is at /etc/cjdroute\&.conf when not otherwise specified, this is equivalent to cjconf\-print\&.
+Prints the cleaned\-up JSON of your config without comments\&. Loads from /etc/cjdroute\&.conf\&.
 .RE
 .PP
-\fBcjconf\-get\fR \-n
+\fBcjconf\-print\fR /path/to/some/file
 .RS 4
-Prints out the name of every property in the top level of the config\&.
-.RE
-.PP
-\fBcjconf\-get\fR \-f myconf
-.RS 4
-Prints the entirety of the JSON at the location "myconf"\&. Again, without using indexes, this is very much like the more basic cjconf\-print\&. Because the "\-f filename" tuple is removed from the argument list during processing, it can occur at any time within the arguments, provided it only occurs once\&.
-.RE
-.PP
-\fBcjconf\-get\fR router interface
-.RS 4
-Prints the contents of config["router"]["interface"]\&. If this is a string or int, it will be printed out directly, with no JSON formatting\&. Otherwise, it\(cqs pretty\-printed with an indent width of 4 spaces, like usual\&.
+Same as above, but loads the file at /path/to/some/file\&.
 .RE
 .SH "BUGS"
 .sp
 See https://github\&.com/campadrenalin/cjdns\-deb/issues
 .SH "AUTHOR"
 .sp
-cjconf\-get was written by Philip Horger in 2012\&. cjdroute was written by Caleb Delisle\&.
+cjconf\-print was written by Philip Horger in 2012\&. cjdroute was written by Caleb Delisle\&.
 .SH "RESOURCES"
 .sp
 Github: https://github\&.com/campadrenalin/cjdns\-deb/
