--- a/doc/cjconf-set.1
+++ b/doc/cjconf-set.1
@@ -2,12 +2,12 @@
 .\"     Title: cjconf-set
 .\"    Author: [see the "AUTHOR" section]
 .\" Generator: DocBook XSL Stylesheets v1.75.2 <http://docbook.sf.net/>
-.\"      Date: 03/02/2012
+.\"      Date: 03/03/2012
 .\"    Manual: \ \&
 .\"    Source: \ \&
 .\"  Language: English
 .\"
-.TH "CJCONF\-SET" "1" "03/02/2012" "\ \&" "\ \&"
+.TH "CJCONF\-SET" "1" "03/03/2012" "\ \&" "\ \&"
 .\" -----------------------------------------------------------------
 .\" * Define some portability stuff
 .\" -----------------------------------------------------------------
@@ -49,12 +49,11 @@ cjconf\-set a b c "Success!"
 .if n \{\
 .RE
 .\}
+.sp
+Note that you may need to use \fIsingle\-quotes\fR on JSON structures to get your shell to pass them on unmangled to cjconf\-set\&. For example, the exclamation point in "Success!" in the above example would definitely cause bash to choke, because of its irritating assumption that you\(cqre trying to do history completion\&. Single quotes are a very good literalizer, although it illustrates exactly why complex JSON structures should be inserted piece by piece, for the sake of your sanity\&. Imagine trying to debug the problems in a command that inserts a 5\-layer\-deep JSON object at once, full of string literals \- not my idea of fun\&.
+.sp
+There are two special values you can provide, otherwise it will try to parse it with a JSON parser, then as an int, and finally falling back to interpreting it as a string should neither of those work\&. "==del" will delete existing inforation at the specified location, and "\-" will signal cjconf\-set to read the contents of stdin as the source, allowing for exactly the kind of complex config insertion that takes multiple commands normally\&.
 .SH "EXAMPLES"
-.PP
-\fBcjconf\-set\fR ["hello"]
-.RS 4
-When the name argument is omitted, you set the JSON contents of the entire file\&. In this case, the file will contain only ["hello"] as a root node\&. You can use this sort of thing for general\-purpose JSON editing but it\(cqs really impractical (and a bit dangerous) to use for actual cjdroute configs\&.
-.RE
 .PP
 \fBcjconf\-set\fR version 2 \-f myconf
 .RS 4
