--- a/doc/cjdinfo.1
+++ b/doc/cjdinfo.1
@@ -1,5 +1,5 @@
 '\" t
-.\"     Title: cjconf-get
+.\"     Title: cjdinfo
 .\"    Author: [see the "AUTHOR" section]
 .\" Generator: DocBook XSL Stylesheets v1.75.2 <http://docbook.sf.net/>
 .\"      Date: 03/03/2012
@@ -7,7 +7,7 @@
 .\"    Source: \ \&
 .\"  Language: English
 .\"
-.TH "CJCONF\-GET" "1" "03/03/2012" "\ \&" "\ \&"
+.TH "CJDINFO" "1" "03/03/2012" "\ \&" "\ \&"
 .\" -----------------------------------------------------------------
 .\" * Define some portability stuff
 .\" -----------------------------------------------------------------
@@ -28,42 +28,40 @@
 .\" * MAIN CONTENT STARTS HERE *
 .\" -----------------------------------------------------------------
 .SH "NAME"
-cjconf-get \- retrieves information from a cjdroute config\&.
+cjdinfo \- Information about your cjdroute setup and instance\&.
 .SH "SYNOPSIS"
 .sp
-\fBcjconf\-get\fR [\-n] [ \-f conf_file ] [ INDEXES ]
+\fBcjdinfo\fR [commands|tunnel|address|key]
 .SH "DESCRIPTION"
 .sp
-cjconf\-get(1) is a great way to base scripting on cjdns configs\&. It parses the JSON recursively, with each index given in the arguments steering it one level of heirarchy deeper\&.
-.sp
-To limit output, try the \-n option\&. For dicts, it prints only the keys\&. For arrays, it prints out the length\&. For anything else it just prints it normally\&.
-.SH "EXAMPLES"
+The cjdinfo(1) command is useful for finding out the key details of your cjdroute instance and setup\&. It was born out of a need to move functionality out of cjdroute for simplicity, and have a place to add informative more informative subcommands as the author saw fit\&.
+.SH "SUBCOMMANDS"
 .PP
-\fBcjconf\-get\fR
+\fBcommands\fR
 .RS 4
-Since it assumes the conf is at /etc/cjdroute\&.conf when not otherwise specified, this is equivalent to cjconf\-print\&.
+The commands that need to be run to connect the tunnel device to the network interface, and allow cjdroute to provide that service\&. Used by (and formerly, in) cjdrouted\&.
 .RE
 .PP
-\fBcjconf\-get\fR \-n
+\fBtunnel\fR
 .RS 4
-Prints out the name of every property in the top level of the config\&.
+Create a tunnel if no appropriately configured one exists, and return its name\&. Useful in scripts\&. Also a cjdrouted refugee\&.
 .RE
 .PP
-\fBcjconf\-get\fR \-f myconf
+\fBaddress\fR
 .RS 4
-Prints the entirety of the JSON at the location "myconf"\&. Again, without using indexes, this is very much like the more basic cjconf\-print\&. Because the "\-f filename" tuple is removed from the argument list during processing, it can occur at any time within the arguments, provided it only occurs once\&.
+The IPv6 address of your cjdroute instance\&. Currently it requires you to be running, or have run, cjdroute through cjdrouted\&. That\(cqs because it determines your address based on the logs\&. However, at some point in the future this will be changed to be based on the result of "cjdinfo commands"\&.
 .RE
 .PP
-\fBcjconf\-get\fR router interface
+\fBkey\fR
 .RS 4
-Prints the contents of config["router"]["interface"]\&. If this is a string or int, it will be printed out directly, with no JSON formatting\&. Otherwise, it\(cqs pretty\-printed with an indent width of 4 spaces, like usual\&.
+The public key of your cjdroute instance\&. Like the address subcommand, it is log\-based, and requires log information in /var/log/cjdns/cjdrouted\&.current\&.log\&. Unlike the address subcommand, this is impossible to fix\&.
 .RE
 .SH "BUGS"
 .sp
 See https://github\&.com/campadrenalin/cjdns\-deb/issues
 .SH "AUTHOR"
 .sp
-cjconf\-get was written by Philip Horger in 2012\&. cjdroute was written by Caleb Delisle\&.
+cjdinfo was written by Philip Horger in 2012\&. cjdroute was written by Caleb Delisle\&.
 .SH "RESOURCES"
 .sp
 Github: https://github\&.com/campadrenalin/cjdns\-deb/
