--- a/doc/cjdlog.1
+++ b/doc/cjdlog.1
@@ -1,5 +1,5 @@
 '\" t
-.\"     Title: cjconf-get
+.\"     Title: cjdlog
 .\"    Author: [see the "AUTHOR" section]
 .\" Generator: DocBook XSL Stylesheets v1.75.2 <http://docbook.sf.net/>
 .\"      Date: 03/03/2012
@@ -7,7 +7,7 @@
 .\"    Source: \ \&
 .\"  Language: English
 .\"
-.TH "CJCONF\-GET" "1" "03/03/2012" "\ \&" "\ \&"
+.TH "CJDLOG" "1" "03/03/2012" "\ \&" "\ \&"
 .\" -----------------------------------------------------------------
 .\" * Define some portability stuff
 .\" -----------------------------------------------------------------
@@ -28,42 +28,50 @@
 .\" * MAIN CONTENT STARTS HERE *
 .\" -----------------------------------------------------------------
 .SH "NAME"
-cjconf-get \- retrieves information from a cjdroute config\&.
+cjdlog \- Information about your cjdroute setup and instance\&.
 .SH "SYNOPSIS"
 .sp
-\fBcjconf\-get\fR [\-n] [ \-f conf_file ] [ INDEXES ]
+\fBcjdlog\fR [make|clear|clear\-old|clear\-new|watch]
 .SH "DESCRIPTION"
 .sp
-cjconf\-get(1) is a great way to base scripting on cjdns configs\&. It parses the JSON recursively, with each index given in the arguments steering it one level of heirarchy deeper\&.
-.sp
-To limit output, try the \-n option\&. For dicts, it prints only the keys\&. For arrays, it prints out the length\&. For anything else it just prints it normally\&.
+cjdlog(1) is a parallel logging utility, so that cjdroute output can be duplicated in two places: a "current process" log at /var/log/cjdns/cjdroute\&.current\&.log, and an all\-time log at /var/log/cjdns/cjdroute\&.log\&.
 .SH "EXAMPLES"
 .PP
-\fBcjconf\-get\fR
+\fBcjdlog\fR
 .RS 4
-Since it assumes the conf is at /etc/cjdroute\&.conf when not otherwise specified, this is equivalent to cjconf\-print\&.
+Logs stdin to both log files in parallel\&. You must be user cjdns or root\&. In general, this is called by cjdrouted, and not something you have to worry about\&. If you are starting cjdrouted manually, pipe it into cjdlog, redirecting output with 2>&1 before the pipe symbol\&.
 .RE
 .PP
-\fBcjconf\-get\fR \-n
+\fBcjdlog\fR make
 .RS 4
-Prints out the name of every property in the top level of the config\&.
+Create the folder, ensure log files exist (even if just blanks) and change file ownership to owner cjdns\&. May be necessary to call before attempting to log any data\&.
 .RE
 .PP
-\fBcjconf\-get\fR \-f myconf
+\fBcjdlog\fR clear
 .RS 4
-Prints the entirety of the JSON at the location "myconf"\&. Again, without using indexes, this is very much like the more basic cjconf\-print\&. Because the "\-f filename" tuple is removed from the argument list during processing, it can occur at any time within the arguments, provided it only occurs once\&.
+Clear both log files\&.
 .RE
 .PP
-\fBcjconf\-get\fR router interface
+\fBcjdlog\fR clear\-old
 .RS 4
-Prints the contents of config["router"]["interface"]\&. If this is a string or int, it will be printed out directly, with no JSON formatting\&. Otherwise, it\(cqs pretty\-printed with an indent width of 4 spaces, like usual\&.
+Clear the all\-time log file at /var/log/cjdns/cjdroute\&.log\&.
+.RE
+.PP
+\fBcjdlog\fR clear\-new
+.RS 4
+Clear the current\-process log file at /var/log/cjdns/cjdroute\&.current\&.log\&.
+.RE
+.PP
+\fBcjdlog\fR watch
+.RS 4
+Write out log file data as it\(cqs written\&. Internally it\(cqs just a tail \-f\&. Note that thanks to the nature of buffers and flushing, this data may come in bits and pieces, and look like it\(cqs cutting out in the middle of lines\&. This is irritating but to be expected\&.
 .RE
 .SH "BUGS"
 .sp
 See https://github\&.com/campadrenalin/cjdns\-deb/issues
 .SH "AUTHOR"
 .sp
-cjconf\-get was written by Philip Horger in 2012\&. cjdroute was written by Caleb Delisle\&.
+cjdlog was written by Philip Horger in 2012\&. cjdroute was written by Caleb Delisle\&.
 .SH "RESOURCES"
 .sp
 Github: https://github\&.com/campadrenalin/cjdns\-deb/
